<resources>
    <string name="app_name">Scobi Messenger</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_in_to_continue">Sign in to continue...</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="password_repeat">Password repeat</string>
    <string name="enter_name">Enter your name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="enter_username">Username</string>
    <string name="new_message">New Message</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
</resources>