<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingVertical="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/app_name"
                android:textColor="@color/indigo600"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_up_to_continue" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_name"
                android:background="@drawable/et_indigo"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_indigo" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_username"
                android:background="@drawable/et_indigo"
                android:drawableStart="@drawable/person_icon_indigo"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_indigo" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_email"
                android:background="@drawable/et_indigo"
                android:drawableStart="@drawable/email_icon_indigo"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_indigo" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/password"
                android:background="@drawable/et_indigo"
                android:drawableStart="@drawable/lock_icon_indigo"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_indigo" />

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/password_repeat"
                android:background="@drawable/et_indigo"
                android:ems="10"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textCursorDrawable="@drawable/cursor_indigo" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:textColor="@color/red600"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="onClickSignUp"
                android:background="@drawable/btn_indigo"
                android:paddingHorizontal="12dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickLogin"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/indigo600" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>